[package]
name = "memetus-raydium-tokenize"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memetus_raydium_tokenize"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []  


[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1", features = ["metadata", "token", "associated_token"] }
num_enum = "0.7.3"
raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.30.1" }
spl-memo = "6.0.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
solana-program = "=2.2.1"
borsh = "0.10.3"

[patch.crates-io]
solana-program = { version = "2.2.1" }
